# pq

./: .gitignore  Cargo.toml  README.md  cliff.toml  demo.tape  install.ps1  install.sh
.github/workflows/: parquet-police.yml  release.yml
examples/: generate_demo_data.rs
src/: cli.rs  config.rs  error.rs  main.rs  spinner.rs
src/commands/: cat.rs  check.rs  compact.rs  convert.rs  count.rs  diff.rs  head.rs  inspect.rs  merge.rs  mod.rs  rewrite.rs  sample.rs  schema.rs  size.rs  slice.rs  sql.rs  stats.rs  tail.rs  util.rs
src/input/: cloud.rs  column_selector.rs  mod.rs  source.rs
src/output/: csv_output.rs  highlight.rs  json.rs  mod.rs  symbols.rs  table.rs  theme.rs
src/parquet_ext/: metadata.rs
tests/: integration.rs
