[package]
name = "pq"
version = "0.1.0"
edition = "2024"
description = "The jq of Parquet. Inspect, transform, and operate on Parquet files from your terminal."
repository = "https://github.com/OrlovEvgeny/pq"
license = "MIT"
readme = "README.md"
keywords = ["parquet", "cli", "arrow", "data", "analytics"]
categories = ["command-line-utilities"]

[dependencies]
# Core Parquet/Arrow
parquet = { version = "55", features = ["arrow"] }
arrow = { version = "55", features = ["prettyprint"] }
arrow-schema = { version = "55", features = ["serde"] }

# CLI
clap = { version = "4", features = ["derive", "env", "string"] }
clap_complete = "4"

# Output formatting
comfy-table = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"
console = "0.15"
indicatif = "0.17"

# Error handling
miette = { version = "7", features = ["fancy"] }
thiserror = "2"

# Config
toml = "0.8"
directories = "6"

# File resolution
glob = "0.3"

# Cloud storage
object_store = { version = "0.11", features = ["aws", "gcp", "azure", "http"] }
url = "2"
futures = "0.3"

# Utilities
bytesize = { version = "2", features = ["serde"] }
num-format = "0.4"
regex = "1"
rand = "0.9"
rayon = "1"

tempfile = "3"

# Async runtime (minimal for now)
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[package.metadata.binstall]
pkg-url = "https://pq.eorlov.org/dist/v{ version }/{ name }-v{ version }-{ target }.tar.gz"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "https://pq.eorlov.org/dist/v{ version }/{ name }-v{ version }-{ target }.zip"
pkg-fmt = "zip"
