[package]
name = "pq-parquet"
version = "1.0.7"
edition = "2024"
description = "The jq of Parquet. Inspect, transform, and operate on Parquet files from your terminal. S3, GCS, Azure support. CLI tool."
repository = "https://github.com/OrlovEvgeny/pq"
license = "MIT"
readme = "README.md"
keywords = ["parquet", "cli", "data-engineering", "jq", "arrow"]
categories = ["command-line-utilities", "database"]

[[bin]]
name = "pq"
path = "src/main.rs"

[dependencies]
# Core Parquet/Arrow
parquet = { version = "56", features = ["arrow"] }
arrow = { version = "56", features = ["prettyprint", "chrono-tz"] }
arrow-schema = { version = "56", features = ["serde"] }

# CLI
clap = { version = "4", features = ["derive", "env", "string"] }
clap_complete = "4"

# Output formatting
comfy-table = { version = "7", features = ["custom_styling"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"
console = "0.15"
indicatif = "0.17"

# Error handling
miette = { version = "7", features = ["fancy"] }
thiserror = "2"

# Config
toml = "0.8"
directories = "6"

# File resolution
glob = "0.3"

# Cloud storage
object_store = { version = "0.12", features = ["aws", "gcp", "azure", "http"] }
url = "2"
futures = "0.3"

# SQL engine
datafusion = { version = "50.3", default-features = false, features = [
    "parquet",
    "datetime_expressions",
    "regex_expressions",
] }

# Utilities
bytesize = { version = "2", features = ["serde"] }
num-format = "0.4"
regex = "1"
rand = "0.9"

tempfile = "3"

# Async runtime (minimal for now)
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
chrono = "0.4"

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[package.metadata.binstall]
pkg-url = "https://pq.eorlov.org/dist/v{ version }/pq-v{ version }-{ target }.tar.gz"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "https://pq.eorlov.org/dist/v{ version }/pq-v{ version }-{ target }.zip"
pkg-fmt = "zip"
